--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML - Matière de l'examen</title>
     <link rel="stylesheet" href="design.css">
-    <link rel="icon" href="icone.ico">
+    <link rel="icon" href="1623956322014.ico">
 </head>
 <body>
     <!--Menu header-->
